--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -17,7 +17,7 @@
     "title": "Notre Héritage",
     "subtitle": "Qualité Ancrée dans les Normes Européennes",
     "description": "SARL HOUKMI EXPORT a été fondée par M. Houkmi Ahmed, ancien Inspecteur de la Qualité pour la Commission Européenne, avec sa fille, Imene Houkmi. Avec plus de 35 ans d'expérience combinée, ce leadership unique garantit que chaque expédition respecte les normes de qualité européennes les plus strictes.",
-    "sub_description": "Nous ne nous contentons pas de commercer ; nous assurons l'excellence. En partenariat avec des fermes et des stations d'emballage de premier plan à Agadir, nous offrons des solutions d'emballage entièrement personnalisables et maintenons une chaîne du froid rigoureuse dans nos entrepôts dédiés.",
+    "sub_description": "Nous ne nous contentons pas de commercer ; nous assurons l'excellence. En partenariat avec des fermes et des stations d'emballage de premier plan à Agadir, we offer fully customizable packaging solutions and maintain a rigorous cold chain in our dedicated warehousing facilities to ensure freshness.",
     "mission": "Offrir des prix imbattables sans compromis sur la qualité, en faisant le pont entre les producteurs marocains et les marchés européens (France, Italie, et au-delà).",
     "experience": "+35 Ans d'Expérience",
     "quality": "Fondé par Ex-Inspecteur UE",
@@ -246,5 +246,46 @@
       "temp": "21°C Moyenne",
       "advantage": "Avantage Atlantique"
     }
+  },
+  "Join": {
+    "title": "Rejoignez l'Équipe",
+    "team": "Houkmi",
+    "subtitle": "Rejoignez un leader mondial de l'exportation agricole et aidez-nous à apporter le meilleur de la nature au monde.",
+    "innovation_title": "L'Innovation d'Abord",
+    "innovation_desc": "Nous utilisons les dernières technologies en logistique et en agriculture pour garantir la qualité.",
+    "global_title": "Communauté Mondiale",
+    "global_desc": "Travaillez avec une équipe diversifiée de professionnels du monde entier.",
+    "growth_title": "Carrière en Croissance",
+    "growth_desc": "Nous investissons dans nos collaborateurs et offrons des parcours clairs pour l'avancement professionnel.",
+    "ready_title": "Prêt à commencer l'aventure ?",
+    "ready_desc": "Nous recherchons toujours des personnes passionnées par la logistique, la vente, le contrôle qualité et la gestion agricole. Envoyez-nous votre CV aujourd'hui.",
+    "apply_now": "POSTULEZ MAINTENANT"
+  },
+  "ApplicationForm": {
+    "title": "Postuler pour un Poste",
+    "subtitle": "Dites-nous en plus sur vous et téléchargez votre CV.",
+    "name": "Nom Complet *",
+    "email": "Adresse Email *",
+    "phone": "Numéro de Téléphone *",
+    "position": "Poste Souhaité *",
+    "position_placeholder": "Sélectionnez un poste",
+    "pos_logistics": "Logistique & Chaîne d'Approvisionnement",
+    "pos_quality": "Contrôle Qualité",
+    "pos_sales": "Vente & Export",
+    "pos_admin": "Administratif",
+    "pos_other": "Autre",
+    "message": "Message",
+    "message_placeholder": "Dites-nous pourquoi vous voulez nous rejoindre...",
+    "upload_cv": "Télécharger le CV (PDF) *",
+    "upload_placeholder": "Choisissez un fichier ou glissez-le ici",
+    "upload_hint": "PDF uniquement, max 5 Mo",
+    "submit": "ENVOYER LA CANDIDATURE",
+    "submitting": "ENVOI EN COURS...",
+    "success_title": "Candidature Reçue !",
+    "success_desc": "Merci de votre intérêt. Nous examinerons votre CV et vous recontacterons bientôt.",
+    "error_upload": "Échec du téléchargement du CV. Veuillez vérifier si Vercel Blob est configuré.",
+    "error_save": "Échec de l'enregistrement des données. Veuillez réessayer.",
+    "error_captcha": "Veuillez vérifier que vous n'êtes pas un robot.",
+    "error_file": "Veuillez télécharger votre CV"
   }
 }
