--- a/public/locales/it.json
+++ b/public/locales/it.json
@@ -168,5 +168,46 @@
     "success": "Grazie! La tua recensione è in attesa di approvazione.",
     "photo": "Carica foto (Opzionale)",
     "pending": "Recensione in attesa di approvazione"
+  },
+  "Join": {
+    "title": "Unisciti al",
+    "team": "Team",
+    "subtitle": "Unisciti a un leader mondiale nell'esportazione agricola e aiutaci a portare il meglio della natura nel mondo.",
+    "innovation_title": "L'Innovazione Prima di Tutto",
+    "innovation_desc": "Utilizziamo le ultime tecnologie in logistica e agricoltura per garantire la qualità.",
+    "global_title": "Comunità Globale",
+    "global_desc": "Lavora con un team diversificato di professionisti provenienti da tutto il mondo.",
+    "growth_title": "Carriera in Crescita",
+    "growth_desc": "Investiamo nelle nostre persone e forniamo percorsi chiari per l'avanzamento professionale.",
+    "ready_title": "Pronto a iniziare il tuo viaggio ?",
+    "ready_desc": "Siamo sempre alla ricerca di persone appassionate di logistica, vendite, controllo qualità e gestione agricola. Inviaci il tuo CV oggi stesso.",
+    "apply_now": "CANDIDATI ORA"
+  },
+  "ApplicationForm": {
+    "title": "Candidati per una Posizione",
+    "subtitle": "Raccontaci di più su di te e carica il tuo CV.",
+    "name": "Nome Completo *",
+    "email": "Indirizzo Email *",
+    "phone": "Numero di Telefono *",
+    "position": "Posizione Desiderata *",
+    "position_placeholder": "Seleziona una posizione",
+    "pos_logistics": "Logistica & Catena di Distribuzione",
+    "pos_quality": "Controllo Qualità",
+    "pos_sales": "Vendite & Export",
+    "pos_admin": "Amministrativo",
+    "pos_other": "Altro",
+    "message": "Messaggio",
+    "message_placeholder": "Raccontaci perché vuoi unirti a noi...",
+    "upload_cv": "Carica CV (PDF) *",
+    "upload_placeholder": "Scegli un file o trascinalo qui",
+    "upload_hint": "Solo PDF, max 5MB",
+    "submit": "INVIA CANDIDATURA",
+    "submitting": "INVIO IN CORSO...",
+    "success_title": "Candidatura Ricevuta!",
+    "success_desc": "Grazie per il tuo interesse. Esamineremo il tuo CV e ti ricontatteremo al più presto.",
+    "error_upload": "Caricamento CV fallito. Verifica se Vercel Blob è configurato.",
+    "error_save": "Impossibile salvare i dati della candidatura. Riprova.",
+    "error_captcha": "Per favore, verifica di non essere un robot.",
+    "error_file": "Per favore, carica il tuo CV"
   }
 }
