--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -131,5 +131,46 @@
     "success": "Спасибо! Ваш отзыв ожидает одобрения.",
     "photo": "Загрузить фото (необязательно)",
     "pending": "Отзыв ожидающий одобрения"
+  },
+  "Join": {
+    "title": "Присоединяйтесь к",
+    "team": "Команде",
+    "subtitle": "Присоединяйтесь к мировому лидеру в области сельскохозяйственного экспорта и помогите нам нести лучшее от природы в мир.",
+    "innovation_title": "Инновации Прежде Всего",
+    "innovation_desc": "Мы используем новейшие технологии в логистике и сельском хозяйстве для обеспечения качества.",
+    "global_title": "Global Community",
+    "global_desc": "Работайте в разнообразной команде профессионалов со всего мира.",
+    "growth_title": "Рост Карьеры",
+    "growth_desc": "Мы инвестируем в наших людей и предоставляем четкие пути для профессионального роста.",
+    "ready_title": "Готовы начать свое путешествие?",
+    "ready_desc": "Мы всегда ищем увлеченных людей в сфере логистики, продаж, контроля качества и управления сельским хозяйством. Отправьте нам свое резюме сегодня.",
+    "apply_now": "ПОДАТЬ ЗАЯВКУ"
+  },
+  "ApplicationForm": {
+    "title": "Подать Заявку на Должность",
+    "subtitle": "Расскажите нам больше о себе и загрузите свое резюме.",
+    "name": "Полное Имя *",
+    "email": "Адрес Электронной Почты *",
+    "phone": "Номер Телефона *",
+    "position": "Желаемая Должность *",
+    "position_placeholder": "Выберите должность",
+    "pos_logistics": "Логистика и цепочка поставок",
+    "pos_quality": "Контроль качества",
+    "pos_sales": "Продажи и экспорт",
+    "pos_admin": "Административный",
+    "pos_other": "Другое",
+    "message": "Сообщение",
+    "message_placeholder": "Расскажите нам, почему вы хотите присоединиться к нам...",
+    "upload_cv": "Загрузить резюме (PDF) *",
+    "upload_placeholder": "Выберите файл или перетащите его сюда",
+    "upload_hint": "Только PDF, макс. 5 МБ",
+    "submit": "ОТПРАВИТЬ ЗАЯВКУ",
+    "submitting": "ОТПРАВКА...",
+    "success_title": "Заявка Получена!",
+    "success_desc": "Спасибо за ваш интерес. Мы рассмотрим ваше резюме и свяжемся с вами в ближайшее время.",
+    "error_upload": "Ошибка загрузки резюме. Проверьте конфигурацию Vercel Blob.",
+    "error_save": "Не удалось сохранить данные заявки. Попробуйте еще раз.",
+    "error_captcha": "Пожалуйста, подтвердите, что вы не робот.",
+    "error_file": "Пожалуйста, загрузите свое резюме"
   }
 }
