style: update favicon, about image and transition text to HOUKMI FAMILY

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -15,12 +15,12 @@
   },
   "About": {
     "title": "Wer Wir Sind",
-    "description": "Mit über 35 Jahren Erfahrung ist HOUKMI EXPORT führend in der Produktion und im Export von Zitrusfrüchten und frischem Gemüse.",
+    "description": "SARL HOUKMI EXPORT wurde von der FAMILIE HOUKMI gegründet. Mit über 35 Jahren Erfahrung garantiert diese Führung, dass jede Lieferung den strengsten europäischen Qualitätsstandards entspricht.",
     "mission": "Unsere Mission ist es, das Beste der Natur mit kompromissloser Qualität zu liefern.",
     "experience": "+35 Jahre Erfahrung",
     "farming": "Nachhaltige Landwirtschaft",
     "globalReach": "Globale Reichweite",
-    "imageCaption": "Sorgfältige Pflege bei jeder Ernte"
+    "imageCaption": "FAMILIE HOUKMI - Ein Vermächtnis an Qualität"
   },
   "Gallery": {
     "description": "Ein Einblick in unsere Farmen, Verpackungsanlagen und das engagierte Team, das Qualität in jeder Kiste gewährleistet."
