--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -16,13 +16,13 @@
   "About": {
     "title": "Our Legacy",
     "subtitle": "Quality Rooted in European Standards",
-    "description": "SARL HOUKMI EXPORT was founded by Mr. Houkmi Ahmed, a former Quality Inspector for the European Commission, alongside his daughter, Imene Houkmi. With over 35 years of combined experience, this unique leadership ensures that every shipment meets the strictest European quality standards.",
+    "description": "SARL HOUKMI EXPORT was founded by the HOUKMI FAMILY. With over 35 years of combined experience, this unique leadership ensures that every shipment meets the strictest European quality standards.",
     "sub_description": "We simply don't just trade; we ensure excellence. Partnering with top-tier farms and packing stations across Agadir, we offer fully customizable packaging solutions and maintain a rigorous cold chain in our dedicated warehousing facilities to ensure freshness.",
     "mission": "To provide unbeatable prices without compromising on quality, bridging the gap between Moroccan producers and European markets (France, Italy, and beyond).",
     "experience": "35+ Years Expertise",
     "quality": "EU Inspector Founded",
     "logistics": "Cold Chain & Custom Packing",
-    "imageCaption": "Mr. Houkmi Ahmed and Imene Houkmi - A legacy of quality"
+    "imageCaption": "HOUKMI FAMILY - A legacy of quality"
   },
   "Gallery": {
     "description": "A glimpse into our farms, packing facilities, and the dedicated team ensuring quality in every box."
