--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -16,13 +16,13 @@
   "About": {
     "title": "Nuestro Legado",
     "subtitle": "Calidad Arraigada en los Estándares Europeos",
-    "description": "SARL HOUKMI EXPORT fue fundada por el Sr. Houkmi Ahmed, ex Inspector de Calidad de la Comisión Europea, junto con su hija, Imene Houkmi. Con más de 35 años de experiencia, este liderazgo único garantiza que cada envío cumpla con los estándares de calidad europeos más estrictos.",
+    "description": "SARL HOUKMI EXPORT fue fundada por la FAMILIA HOUKMI. Con más de 35 años de experiencia, este liderazgo único garantiza que cada envío cumpla con los estándares de calidad europeos más estrictos.",
     "sub_description": "No solo somos comerciantes; aseguramos la excelencia. Colaborando con granjas y estaciones de empaque de primer nivel en Agadir, ofrecemos soluciones de embalaje totalmente personalizables y mantenemos una cadena de frío rigurosa en nuestras instalaciones dedicadas para garantizar la frescura.",
     "mission": "Brindar precios inmejorables sin comprometer la calidad, uniendo a los productores marroquíes con los mercados europeos (Francia, Italia y más allá).",
     "experience": "+35 Años de Experiencia",
     "quality": "Fundada por ex Inspector UE",
     "logistics": "Cadena de Frío y Empaque a Medida",
-    "imageCaption": "Sr. Houkmi Ahmed e Imene Houkmi - Un legado de calidad"
+    "imageCaption": "FAMILIA HOUKMI - Un legado de calidad"
   },
   "Gallery": {
     "description": "Un vistazo a nuestras granjas, instalaciones de envasado y al equipo dedicado que garantiza la calidad en cada caja."
