--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -16,13 +16,13 @@
   "About": {
     "title": "Notre Héritage",
     "subtitle": "Qualité Ancrée dans les Normes Européennes",
-    "description": "SARL HOUKMI EXPORT a été fondée par M. Houkmi Ahmed, ancien Inspecteur de la Qualité pour la Commission Européenne, avec sa fille, Imene Houkmi. Avec plus de 35 ans d'expérience combinée, ce leadership unique garantit que chaque expédition respecte les normes de qualité européennes les plus strictes.",
+    "description": "SARL HOUKMI EXPORT a été fondée par la FAMILLE HOUKMI. Avec plus de 35 ans d'expérience combinée, ce leadership unique garantit que chaque expédition respecte les normes de qualité européennes les plus strictes.",
     "sub_description": "Nous ne nous contentons pas de commercer ; nous assurons l'excellence. En partenariat avec des fermes et des stations d'emballage de premier plan à Agadir, we offer fully customizable packaging solutions and maintain a rigorous cold chain in our dedicated warehousing facilities to ensure freshness.",
     "mission": "Offrir des prix imbattables sans compromis sur la qualité, en faisant le pont entre les producteurs marocains et les marchés européens (France, Italie, et au-delà).",
     "experience": "+35 Ans d'Expérience",
     "quality": "Fondé par Ex-Inspecteur UE",
     "logistics": "Chaîne du Froid & Emballage",
-    "imageCaption": "M. Houkmi Ahmed et Imene Houkmi - Un héritage de qualité"
+    "imageCaption": "FAMILLE HOUKMI - Un héritage de qualité"
   },
   "Gallery": {
     "description": "Un aperçu de nos fermes, installations d'emballage et de l'équipe dévouée garantissant la qualité dans chaque boîte."
