--- a/public/locales/it.json
+++ b/public/locales/it.json
@@ -16,13 +16,13 @@
   "About": {
     "title": "La Nostra Eredità",
     "subtitle": "Qualità Radicata negli Standard Europei",
-    "description": "SARL HOUKMI EXPORT è stata fondata dal Sig. Houkmi Ahmed, ex Ispettore di Qualità della Commissione Europea, insieme a sua figlia, Imene Houkmi. Con oltre 35 anni di esperienza combinata, questa leadership unica garantisce che ogni spedizione soddisfi i più severi standard di qualità europei.",
+    "description": "SARL HOUKMI EXPORT è stata fondata dalla FAMIGLIA HOUKMI. Con oltre 35 anni di esperienza combinata, questa leadership unica garantisce che ogni spedizione soddisfi i più severi standard di qualità europei.",
     "sub_description": "Non ci limitiamo a commerciare; garantiamo l'eccellenza. Collaborando con aziende agricole e stazioni di confezionamento di prim'ordine ad Agadir, offriamo soluzioni di imballaggio completamente personalizzabili e manteniamo una rigorosa catena del freddo nei nostri magazzini dedicati.",
     "mission": "Offrire prezzi imbattibili senza compromettere la qualità, colmando il divario tra i produttori marocchini e i mercati europei (Francia, Italia e oltre).",
     "experience": "+35 Anni di Esperienza",
     "quality": "Fondato da Ispettore UE",
     "logistics": "Catena del Freddo & Imballaggio",
-    "imageCaption": "Il Sig. Houkmi Ahmed e Imene Houkmi - Un'eredità di qualità"
+    "imageCaption": "FAMIGLIA HOUKMI - Un'eredità di qualità"
   },
   "Gallery": {
     "description": "Uno sguardo alle nostre fattorie, strutture di confezionamento e al team dedicato che garantisce la qualità in ogni scatola."
