--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -15,12 +15,12 @@
   },
   "About": {
     "title": "Кто Мы",
-    "description": "Имея более 35 лет опыта, HOUKMI EXPORT является лидером в производстве и экспорте цитрусовых и свежих овощей.",
+    "description": "SARL HOUKMI EXPORT была основана СЕМЬЕЙ ХУКМИ (HOUKMI FAMILY). Имея более 35 лет коллективного опыта, это руководство гарантирует, что каждая поставка соответствует самым строгим европейским стандартам качества.",
     "mission": "Наша миссия - предоставлять лучшее от природы с безупречным качеством.",
     "experience": "+35 Лет Опыта",
     "farming": "Устойчивое Земледелие",
     "globalReach": "Глобальный Охват",
-    "imageCaption": "Тщательный уход за каждым урожаем"
+    "imageCaption": "СЕМЬЯ ХУКМИ (HOUKMI FAMILY) - Наследие качества"
   },
   "Gallery": {
     "description": "Взгляд на наши фермы, упаковочные предприятия и преданную команду, обеспечивающую качество в каждой коробке."
